--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <video id="adVideo" autoplay muted playsinline style="display:none;"></video>
   </div>
 
-  <script type="module" src="script.js"></script>
+  <script type="module" src="assets/js/script.js"></script>
 </body>
 </html>
