--- a/admin.html
+++ b/admin.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Adora - Admin</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <div class="admin-panel">
@@ -19,6 +19,6 @@
     <ul id="adList"></ul>
   </div>
 
-  <script type="module" src="admin.js"></script>
+  <script type="module" src="assets/js/admin.js"></script>
 </body>
 </html>
