--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Adora - Home</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/js/style.css">
 </head>
 <body>
+  <!-- Background Animation Layer -->
+  <div class="animated-bg"></div>
+  
+  <!-- Ad Container -->
   <div class="ad-container">
     <img id="adImage" style="display:none;">
     <video id="adVideo" autoplay muted playsinline style="display:none;"></video>
