--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
   <script type="module">
     import { app, auth, db } from "./auth.js";
     import { createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-    import { ref, set, get, child } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
+    import { ref, set, get } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
 
     document.getElementById("signup-btn").addEventListener("click", async () => {
       const email = document.getElementById("signup-email").value;
@@ -34,27 +34,31 @@
       }
 
       try {
-        // Create auth user
+        // Create user in Firebase Auth
         const userCred = await createUserWithEmailAndPassword(auth, email, password);
         const uid = userCred.user.uid;
 
-        // Check if this is first user
-        const snapshot = await get(child(ref(db), "users"));
-        let role = "user";
-        if (!snapshot.exists()) {
-          role = "superadmin";
-        }
+        // Check if any users exist
+        const usersRef = ref(db, "users");
+        const snapshot = await get(usersRef);
+        let role = snapshot.exists() ? "user" : "superadmin";
 
-        // Save user role
+        // Save user info in Realtime DB
         await set(ref(db, "users/" + uid), {
           email,
           role,
           createdAt: Date.now()
         });
 
-        msgBox.textContent = `Signup successful! You are registered as ${role}.`;
+        msgBox.textContent = `Signup successful! You are registered as ${role}. Redirecting...`;
         msgBox.className = "text-green-400 text-center";
         msgBox.classList.remove("hidden");
+
+        // Redirect after short delay
+        setTimeout(() => {
+          window.location.href = "admin.html";
+        }, 1500);
+
       } catch (error) {
         msgBox.textContent = "Error: " + error.message;
         msgBox.className = "text-red-500 text-center";
