--- a/admin.html
+++ b/admin.html
@@ -18,10 +18,12 @@
   </div>
 
   <!-- Admin Dashboard -->
-  <div id="admin-page" class="hidden w-full max-w-4xl p-8 bg-gray-800 rounded-2xl shadow-lg">
-    <h2 class="text-3xl font-bold text-purple-400 mb-6">Upload Ad</h2>
-    <form id="upload-form" class="space-y-4">
-      <input id="ad-title" type="text" placeholder="Title" class="w-full p-3 rounded-lg bg-gray-700">
+  <div id="admin-page" class="hidden w-full max-w-5xl p-8 bg-gray-800 rounded-2xl shadow-lg">
+    <h2 class="text-3xl font-bold text-purple-400 mb-6">Ad Management</h2>
+
+    <!-- Upload only for superadmin -->
+    <form id="upload-form" class="space-y-4 hidden">
+      <input id="ad-title" type="text" placeholder="Title of the Ad" class="w-full p-3 rounded-lg bg-gray-700">
       <input id="ad-file" type="file" accept="image/*,video/*" class="w-full">
       <button type="submit" class="w-full bg-purple-600 hover:bg-purple-700 transition p-3 rounded-lg">Submit</button>
     </form>
@@ -32,31 +34,51 @@
   <script type="module">
     import { app, auth, db, storage } from "./auth.js";
     import { signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-    import { ref, push, set, onValue, remove } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
+    import { ref, push, set, onValue, remove, get } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
     import { ref as sRef, uploadBytes, getDownloadURL, deleteObject } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js";
 
     const loginPage = document.getElementById("login-page");
     const adminPage = document.getElementById("admin-page");
     const adsList = document.getElementById("ads-list");
+    const uploadForm = document.getElementById("upload-form");
+
+    let currentRole = "user";
 
     // Login
-    document.getElementById("login-btn").addEventListener("click", () => {
+    document.getElementById("login-btn").addEventListener("click", async () => {
       const email = document.getElementById("email").value;
       const password = document.getElementById("password").value;
-      signInWithEmailAndPassword(auth, email, password)
-        .then(() => {
-          loginPage.classList.add("hidden");
-          adminPage.classList.remove("hidden");
-          loadAds();
-        })
-        .catch(() => {
-          document.getElementById("login-error").classList.remove("hidden");
-        });
+
+      try {
+        const userCred = await signInWithEmailAndPassword(auth, email, password);
+        const uid = userCred.user.uid;
+
+        // Get role from DB
+        const snapshot = await get(ref(db, "users/" + uid));
+        if (snapshot.exists()) {
+          currentRole = snapshot.val().role;
+        }
+
+        loginPage.classList.add("hidden");
+        adminPage.classList.remove("hidden");
+
+        if (currentRole === "superadmin") {
+          uploadForm.classList.remove("hidden");
+        }
+
+        loadAds();
+      } catch (err) {
+        document.getElementById("login-error").classList.remove("hidden");
+      }
     });
 
-    // Upload Ad
-    document.getElementById("upload-form").addEventListener("submit", async (e) => {
+    // Upload Ad (only superadmin)
+    uploadForm.addEventListener("submit", async (e) => {
       e.preventDefault();
+      if (currentRole !== "superadmin") {
+        return alert("Only superadmin can upload ads.");
+      }
+
       const title = document.getElementById("ad-title").value;
       const file = document.getElementById("ad-file").files[0];
       if (!file || !title) return alert("Please enter title and select file.");
@@ -107,18 +129,21 @@
           title.textContent = ad.title;
           card.appendChild(title);
 
-          const delBtn = document.createElement("button");
-          delBtn.textContent = "Delete";
-          delBtn.className = "mt-2 bg-red-600 hover:bg-red-700 text-white px-3 py-1 rounded";
-          delBtn.onclick = async () => {
-            if (confirm("Delete this ad?")) {
-              await remove(ref(db, "ads/" + ad.id));
-              if (ad.storagePath) {
-                await deleteObject(sRef(storage, ad.storagePath));
+          // Delete only for superadmin
+          if (currentRole === "superadmin") {
+            const delBtn = document.createElement("button");
+            delBtn.textContent = "Delete";
+            delBtn.className = "mt-2 bg-red-600 hover:bg-red-700 text-white px-3 py-1 rounded";
+            delBtn.onclick = async () => {
+              if (confirm("Delete this ad?")) {
+                await remove(ref(db, "ads/" + ad.id));
+                if (ad.storagePath) {
+                  await deleteObject(sRef(storage, ad.storagePath));
+                }
               }
-            }
-          };
-          card.appendChild(delBtn);
+            };
+            card.appendChild(delBtn);
+          }
 
           adsList.prepend(card);
         });
