--- a/index.html
+++ b/index.html
@@ -1,45 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Adora - Home</title>
-  <link rel="stylesheet" href="assets/js/style.css">
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: #000;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-    }
-    .ad-container {
-      width: 100%;
-      max-width: 100vw;
-      max-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      overflow: hidden;
-    }
-    .ad-container img,
-    .ad-container video {
-      width: 100%;
-      height: auto;
-      max-height: 100vh;
-      object-fit: contain;
-    }
-  </style>
+  <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
-  <!-- Background Animation Layer -->
+  <!-- Background Animation -->
   <div class="animated-bg"></div>
-  
-  <!-- Ad Container -->
+
+  <!-- Ads -->
   <div class="ad-container">
-    <img id="adImage" style="display:none;">
+    <img id="adImage" style="display:none;" />
     <video id="adVideo" autoplay muted playsinline style="display:none;"></video>
   </div>
 
