--- a/signup.html
+++ b/signup.html
@@ -1,70 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Adora Admin Signup</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Signup - Adora</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-900 text-white min-h-screen flex items-center justify-center">
-
-  <div id="signup-page" class="w-full max-w-md p-8 bg-gray-800 rounded-2xl shadow-lg space-y-6">
-    <h2 class="text-3xl font-bold text-center text-green-400">Adora Admin Signup</h2>
-    <input id="signup-email" type="email" placeholder="Email" class="w-full p-3 rounded-lg bg-gray-700">
-    <input id="signup-password" type="password" placeholder="Password" class="w-full p-3 rounded-lg bg-gray-700">
-    <button id="signup-btn" class="w-full bg-green-600 hover:bg-green-700 transition p-3 rounded-lg">Sign Up</button>
-    <p id="signup-msg" class="text-center mt-2 hidden"></p>
+<body class="bg-gray-900 flex items-center justify-center min-h-screen text-white">
+  <div class="w-full max-w-md bg-gray-800 p-8 rounded-xl shadow-lg space-y-6">
+    <h2 class="text-2xl font-bold text-center text-green-400">Create Account</h2>
+    <input id="signup-email" type="email" placeholder="Email" class="w-full p-3 rounded bg-gray-700" />
+    <input id="signup-password" type="password" placeholder="Password" class="w-full p-3 rounded bg-gray-700" />
+    <button id="signup-btn" class="w-full bg-green-600 hover:bg-green-700 p-3 rounded">Sign Up</button>
+    <p id="signup-msg" class="hidden text-center mt-2"></p>
+    <p class="text-center mt-4">Already have an account? <a href="login.html" class="text-blue-400">Login</a></p>
   </div>
 
-  <script type="module">
-    import { app, auth, db } from "./auth.js";
-    import { createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-    import { ref, set, get } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
-
-    document.getElementById("signup-btn").addEventListener("click", async () => {
-      const email = document.getElementById("signup-email").value;
-      const password = document.getElementById("signup-password").value;
-      const msgBox = document.getElementById("signup-msg");
-
-      if (!email || !password) {
-        msgBox.textContent = "Please enter email and password.";
-        msgBox.className = "text-red-500 text-center";
-        msgBox.classList.remove("hidden");
-        return;
-      }
-
-      try {
-        // Create user in Firebase Auth
-        const userCred = await createUserWithEmailAndPassword(auth, email, password);
-        const uid = userCred.user.uid;
-
-        // Check if any users exist
-        const usersRef = ref(db, "users");
-        const snapshot = await get(usersRef);
-        let role = snapshot.exists() ? "user" : "superadmin";
-
-        // Save user info in Realtime DB
-        await set(ref(db, "users/" + uid), {
-          email,
-          role,
-          createdAt: Date.now()
-        });
-
-        msgBox.textContent = `Signup successful! You are registered as ${role}. Redirecting...`;
-        msgBox.className = "text-green-400 text-center";
-        msgBox.classList.remove("hidden");
-
-        // Redirect after short delay
-        setTimeout(() => {
-          window.location.href = "admin.html";
-        }, 1500);
-
-      } catch (error) {
-        msgBox.textContent = "Error: " + error.message;
-        msgBox.className = "text-red-500 text-center";
-        msgBox.classList.remove("hidden");
-      }
-    });
-  </script>
+  <script type="module" src="assets/js/account.js"></script>
 </body>
 </html>
