--- a/signup.html
+++ b/signup.html
@@ -9,11 +9,24 @@
 <body class="bg-gray-900 flex items-center justify-center min-h-screen text-white">
   <div class="w-full max-w-md bg-gray-800 p-8 rounded-xl shadow-lg space-y-6">
     <h2 class="text-2xl font-bold text-center text-green-400">Create Account</h2>
-    <input id="signup-email" type="email" placeholder="Email" class="w-full p-3 rounded bg-gray-700" />
-    <input id="signup-password" type="password" placeholder="Password" class="w-full p-3 rounded bg-gray-700" />
-    <button id="signup-btn" class="w-full bg-green-600 hover:bg-green-700 p-3 rounded">Sign Up</button>
+
+    <!-- ✅ wrapped in form -->
+    <form id="signup-form" class="space-y-4">
+      <input id="signup-email" type="email" placeholder="Email"
+             class="w-full p-3 rounded bg-gray-700" required />
+      <input id="signup-password" type="password" placeholder="Password"
+             class="w-full p-3 rounded bg-gray-700" required />
+      <button type="submit"
+              class="w-full bg-green-600 hover:bg-green-700 p-3 rounded">
+        Sign Up
+      </button>
+    </form>
+
     <p id="signup-msg" class="hidden text-center mt-2"></p>
-    <p class="text-center mt-4">Already have an account? <a href="login.html" class="text-blue-400">Login</a></p>
+    <p class="text-center mt-4">
+      Already have an account?
+      <a href="login.html" class="text-blue-400">Login</a>
+    </p>
   </div>
 
   <script type="module" src="assets/js/account.js"></script>
