--- a/admin.html
+++ b/admin.html
@@ -32,7 +32,7 @@
   </div>
 
   <script type="module">
-    import { app, auth, db, storage } from ".assets/js/auth.js";
+    import { app, auth, db, storage } from "./assets/js/auth.js";
     import { signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
     import { ref, push, set, onValue, remove, get } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
     import { ref as sRef, uploadBytes, getDownloadURL, deleteObject } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js";
