--- a/admin.html
+++ b/admin.html
@@ -21,7 +21,7 @@
   </div>
 
   <script type="module">
-    import { app, auth, db, storage } from ".assets/js/auth.js";
+    import { app, auth, db, storage } from "/assets/js/auth.js";
     import { ref as dbRef, push, set } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
     import { ref as sRef, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js";
 
